--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,10 +52,10 @@
     <string name="toggle_flash">Toggle Flash</string>
     <string name="action_settings">Settings</string>
     <string name="scanned_data">Scanned Data</string>
-    <string name="audio_recorder">Audio Recorder</string>
+    <string name="audio_recorder">Record Audio</string>
     <string name="start_recording">Start Recording</string>
     <string name="stop_recording">Stop Recording</string>
-    <string name="play_recording">Play Recording</string>
+    <string name="play_recording">Stop and send recording</string>
     <string name="stop_playing">Stop Playing</string>
     <string name="status">Status</string>
     <string name="info">Getting SPeed.....</string>
